# minilog

./: .clang-format  .clang-tidy  .envrc  .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  codecov.yml  conanfile.py  docker-compose.yml  minilog-cli-viewer.py  minilog.conf.example  plan.md  ruff.toml  shell.nix  syslog-server.conf  syslog-server.py
.github/workflows/: build.yml
cmake/: clang_format_check.cmake
fuzz/: fuzz_parser.cpp
fuzz/corpus/: malformed  rfc5424
installer/: minilog.conf  setup.iss
scripts/: check_headers.py
src/: main.cpp
src/cli-viewer/: minilog-cli-viewer.conf.example
src/config/: config.cpp  config.hpp
src/forwarder/: forwarder.cpp  forwarder.hpp
src/output/: log_file.cpp  log_file.hpp  output_manager.cpp  output_manager.hpp
src/parser/: syslog_message.hpp  syslog_parser.cpp  syslog_parser.hpp
src/platform/: messages.mc  os_log.hpp  os_log_linux.cpp  os_log_win.cpp  service.hpp  service_linux.cpp  service_win.cpp
src/server/: main.cpp  minilog.rc  udp_server.cpp  udp_server.hpp
src/server/config/: config.cpp
src/server/forwarder/: forwarder.cpp  forwarder.hpp
src/server/output/: log_file.cpp
src/server/parser/: syslog_message.hpp
src/server/platform/: service_win.cpp
src/web-viewer/: config.go  config_test.go  go.mod  handlers.go  handlers_test.go  main.go  reader.go  reader_test.go  rotation_test.go  rsrc_windows_amd64.syso  service_other.go  service_windows.go
src/web-viewer/assets/: app.js  index.html  style.css
src/web-viewer/demo/: append_data.py  gen_data.py  minilog.conf  run.py
tests/: CMakeLists.txt  check_headers.py  test_binary.py  test_config.cpp  test_forwarder.cpp  test_integration.cpp  test_output.cpp  test_parser.cpp  test_stress.cpp  test_syslog_server.py  test_viewer.py
tests/binary/: test_binary.py
tests/cli-viewer/: test_cli_viewer.py
tests/installer/: test_installer.py
tests/server/: test_config.cpp  test_integration.cpp  test_output.cpp  test_parser.cpp  test_stress.cpp
tests/server/fuzz/: fuzz_parser.cpp
